renameCategorytoproduct
