# apispecs.json
@@ -35,7 +35,7 @@
         }
     },
     "paths": {
-        "/categories": {
+        "/products": {
             "get": {
                 "security": [
                     {
@@ -238,7 +238,7 @@
                 }
             }
         },
-        "/categories/{category_id}": {
+        "/products/{category_id}": {
             "get": {
                 "security": [
                     {
