# main.go
@@ -22,16 +22,16 @@ func main() {
 	db := database.GetConnection()
 	categoryRepo := repository.NewCategoryRepository()
 	validator_ := validator.New()
-	categorySer := services.NewCategoryService(db, categoryRepo, *validator_)
-	categoryHandler := handler.NewHandler(categorySer)
+	prodSer := services.NewCategoryService(db, categoryRepo, *validator_)
+	prodHandler := handler.NewHandler(prodSer)
 	echo_ := echo.New()
 	api_ := echo_.Group("/api")
 	api_.Use(middleware.AuthMiddleware, exception.ErrorHandlerMiddleware)
-	api_.GET("/categories", categoryHandler.FindAll)
-	api_.POST("/categories", categoryHandler.Create)
-	api_.PUT("/categories", categoryHandler.Update)
-	api_.DELETE("/categories", categoryHandler.Delete)
-	api_.GET("/categories/:category_id", categoryHandler.FindByCategoryId)
+	api_.GET("/products", prodHandler.FindAll)
+	api_.POST("/products", prodHandler.Create)
+	api_.PUT("/products", prodHandler.Update)
+	api_.DELETE("/products", prodHandler.Delete)
+	api_.GET("/products/:category_id", prodHandler.FindByCategoryId)
 
 	echo_.Start(":3333")
 }
